# Mathprak-2

./: README.md
codes/: CMakeLists.txt  cat_geometry.cpp  run.sh  solve_cat_heat.py
codes/modes/: cold_radiator.json  internal_only.json  room_radiator.json
